Fixed mobile menu focus issue when not on a menu page

--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -232,7 +232,7 @@
         <div class="mdc-drawer__content">
           <nav class="mdc-list">
             <a class="mdc-list-item {{#compare @root.request.url.pathname "/"}} mdc-list-item--activated{{/compare}}"
-               href="/" {{#compare @root.request.url.pathname "/"}}aria-selected="true"{{else}}aria-hidden="true"{{/compare}}>
+               href="/" aria-selected="true" tabindex="1">
               <span class="far fa-home mdc-list-item__graphic" aria-hidden="true"></span>
               Home
             </a>
