--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -52,13 +52,13 @@
                     ],
                     "datasets": [
                       {
-                        "name": "sectors",
+                        "name": "client_groups",
                         "templates": {
-                          "header": "<h3>Sectors</h3>"
+                          "header": "<h3>Client group</h3>"
                         },
                         "display": "label",
                         "items": [
-                          {{#each @root.data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+                          {{#each @root.data.supplimentaryResponses.types.aggregations.client_group.buckets ~}}
                           {
                             "label": {{{stringify key}}},
                             "value": {{{stringify (slugify key)}}}
@@ -67,28 +67,13 @@
                         ]
                       },
                       {
-                        "name": "roles",
+                        "name": "work_types",
                         "templates": {
-                          "header": "<h3>Roles</h3>"
+                          "header": "<h3>Work type</h3>"
                         },
                         "display": "label",
                         "items": [
-                          {{#each @root.data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
-                          {
-                            "label": {{{stringify key}}},
-                            "value": {{{stringify (slugify key)}}}
-                          }{{#unless @last}},{{/unless}}
-                          {{/each ~}}
-                        ]
-                      },
-                      {
-                        "name": "role_status",
-                        "templates": {
-                          "header": "<h3>Working pattern</h3>"
-                        },
-                        "display": "label",
-                        "items": [
-                          {{#each @root.data.supplimentaryResponses.types.aggregations.role_status.buckets ~}}
+                          {{#each @root.data.supplimentaryResponses.types.aggregations.work_type.buckets ~}}
                           {
                             "label": {{{stringify key}}},
                             "value": {{{stringify (slugify key)}}}
@@ -174,7 +159,7 @@
         </span>
       </span>
       <span class="mdc-typography--body2">
-        By role, sector, working pattern, or region
+        By client group or work type
       </span>
     </h3>
     <div id="home-browse-collapse" style="display: none;">
