--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -7,7 +7,7 @@
       <ul class="mdc-list">
         {{#each @root.data.supplimentaryResponses.types.aggregations.client_group_slugs.buckets ~}}
           {{#if key ~}}
-            <a class="mdc-list-item" href="/search?client_groups%5B%5D={{urlencode key}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Client group: {{key}}' })">
+            <a class="mdc-list-item" href="/search?client_group%5B%5D={{urlencode key}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Client group: {{key}}' })">
               <span class="mdc-list-item__text">
                 {{#with (lookup @root.data.supplimentaryResponses.types.aggregations.client_group.buckets @index) ~}}
                   {{{key}}}
@@ -28,7 +28,7 @@
       <ul class="mdc-list">
         {{#each @root.data.supplimentaryResponses.types.aggregations.work_type_slugs.buckets ~}}
           {{#if key ~}}
-            <a class="mdc-list-item" href="/search?work_types%5B%5D={{urlencode key}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Work type: {{key}}' })">
+            <a class="mdc-list-item" href="/search?work_type%5B%5D={{urlencode key}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../eventContext "category-browser"}}', event_label: 'Work type: {{key}}' })">
               <span class="mdc-list-item__text">
                 {{#with (lookup @root.data.supplimentaryResponses.types.aggregations.work_type.buckets @index) ~}}
                   {{{key}}}
