--- a/sites/configurations/getinvolved/templates/opportunities/home.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/home.hbs
@@ -52,7 +52,7 @@
                     ],
                     "datasets": [
                       {
-                        "name": "client_groups",
+                        "name": "client_group",
                         "templates": {
                           "header": "<h3>Client group</h3>"
                         },
@@ -67,7 +67,7 @@
                         ]
                       },
                       {
-                        "name": "work_types",
+                        "name": "work_type",
                         "templates": {
                           "header": "<h3>Work type</h3>"
                         },
