--- a/sites/configurations/getinvolved/partials/browse.hbs
+++ b/sites/configurations/getinvolved/partials/browse.hbs
@@ -42,5 +42,35 @@
         {{/each ~}}
       </ul>
     </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+      <div class="browse-title browse-title-regions mdc-typography--headline5">
+        Regions
+      </div>
+      <ul class="mdc-list">
+        {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
+          {{#if key ~}}
+          {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">" 1 ~}}
+            <li class="mdc-list-item mdc-list-item--{{@index}}">
+              <h3 class="mdc-typography--headline7">{{{key}}}</h3>
+            </li>
+            {{/compare ~}}
+          {{/if ~}}
+          {{#each this.regions_slugs.buckets ~}}
+            {{#if key ~}}
+              <a class="mdc-list-item" href="/search?regions%5B%5D={{urlencode key}}" role="menuitem" onclick="gtag('event', 'navigation', { event_category: '{{default ../../eventContext "category-browser"}}', event_label: 'Region: {{key}}' })">
+                <span class="mdc-list-item__text">
+                  {{#with (lookup ../regions.buckets @index) ~}}
+                    {{{key}}}
+                  {{/with ~}}
+                </span>
+                <span class="mdc-list-item__meta" aria-label="{{doc_count}} vacancies">
+                  {{doc_count}}
+                </span>
+              </a>
+            {{/if ~}}
+          {{/each ~}}
+        {{/each ~}}
+      </ul>
+    </div>
   </div>
 </div>
