--- a/sites/configurations/getinvolved/partials/terms-maps.hbs
+++ b/sites/configurations/getinvolved/partials/terms-maps.hbs
@@ -1,5 +1,5 @@
 {
-  {{#each (split "client_group,work_type" ",")}}
+  {{#each (split "client_group,work_type,region" ",")}}
     "{{this}}": {
       "slugsMap": {
         {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this ".buckets")) ~}}
