--- a/sites/configurations/getinvolved/partials/opportunity/map.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/map.hbs
@@ -8,21 +8,14 @@
   </div>
   {{/if ~}}
   <div class="mdc-typography--body2 post-info">
-    {{#if role_status_list ~}}
-    <div class="post-info-item post-info-status">
-      <span class="far fa-clock fa-fw" title="Working pattern"></span>
-      {{{role_status_list}}}
-    </div>
-    {{/if ~}}
-    {{#if salary ~}}
-    <div class="post-info-item post-info-salary">
-      <span class="far fa-calculator fa-fw" title="Salary"></span>
-      {{{salary}}}
+    {{#if description ~}}
+    <div class="post-info-item post-info-description">
+      {{{description}}}
     </div>
     {{/if ~}}
   </div>
   <div class="mdc-typography--body2">
     <a href="/opportunity/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
   </div>
+  {{>ga documentType="milo-volunteering-opportunity" documentId=Id hitType="map"}}
 </div>
-{{>ga documentType="milo-volunteering-opportunity" documentId=Id hitType="map"}}
