--- a/sites/configurations/getinvolved/partials/opportunity/actions.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/actions.hbs
@@ -31,4 +31,9 @@
     <a href="/opportunity/{{slug}}{{@root.request.url.search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
     {{/compare ~}}
   </div>
+  <div class="mdc-card__action-icons pull-right">
+    <div class="mdc-chip-set mdc-chip-set--filter">
+      {{> favourite_chip id=Id}}
+    </div>
+  </div>
 </div>
