Update error message

--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -27,8 +27,8 @@
   {{> tfn_latest}}
 
   {{else}}
-  <p>
-    <strong>Error:</strong> the requested job could not be found - it may have expired.
-  </p>
+  <div class="search-info mdc-elevation--z3">
+    We could not find the vacancy you were looking for. It may have been removed or expired.
+  </div>
   {{/compare}}
 </div>
