--- a/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity-search-form.hbs
@@ -85,23 +85,51 @@
     <input type="hidden" name="lat" value="{{@root.request.params.query.lat}}">
     <input type="hidden" name="lng" value="{{@root.request.params.query.lng}}">
 
-    {{#each (split "regions,client_groups,work_types" ",")}}
-      <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
+    {{#each (split "regions,client_groups,work_types" ",") ~}}
+      <h3 class="mdc-drawer__content-heading cursor-pointer noselect mdc-drawer--occasional-ie11" data-collapse-target="#{{../instance_id}}-{{this}}-collapse" role="button" aria-pressed="false" aria-label="Show {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}" tabindex="0">
         {{getProperty @root.context.metaData.termTypeLabels (concat this ".plural")}}
         <span class="mdc-icon-toggle pull-right">
           <i class="far {{#if (getProperty @root.request.params.query this)}}fa-chevron-up{{else}}fa-chevron-down{{/if}}" aria-hidden="true"></i>
         </span>
       </h3>
-      <div class="mdc-drawer--occasional" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
-        {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
-          {{#if key ~}}
-            {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+      <div class="mdc-drawer--occasional-ie11" id="{{../instance_id}}-{{this}}-collapse"{{#unless (getProperty @root.request.params.query this)}} style="display: none;"{{/unless}}>
+        {{#compare this "===" "regions" ~}}
+          {{#if (any @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ~}}
+            {{#each @root.data.supplimentaryResponses.types.aggregations.countries.buckets ~}}
+              {{#if key ~}}
+                {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+                  <h3 class="mdc-typography--headline7">{{{key}}}</h3>
+                {{/compare ~}}
+              {{/if ~}}
+              {{#each this.regions_slugs.buckets ~}}
+                {{#if key ~}}
+                  {{> term_checkbox slug=key field="regions" selected=@root.request.params.query.regions instance_id=../../../instance_id value=(lookup ../this.regions.buckets @index)}}
+                {{/if ~}}
+              {{/each ~}}
+            {{/each ~}}
+            {{#ifAny (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.countries.buckets) ">=" 1 ~}}
+                <h3 class="mdc-typography--headline7">Other</h3>
+              {{/compare ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.home_based.buckets) ">=" 1 ~}}
+                {{> term_checkbox slug="true" field="home_based" selected=@root.request.params.query.home_based instance_id=../instance_id value="Home-based"}}
+              {{/compare ~}}
+              {{#compare (length @root.data.supplimentaryResponses.types.aggregations.various_locations.buckets) ">=" 1 ~}}
+                {{> term_checkbox slug="true" field="various_locations" selected=@root.request.params.query.various_locations instance_id=../instance_id value="Various locations"}}
+              {{/compare ~}}
+            {{/ifAny ~}}
           {{/if ~}}
-        {{/each ~}}
+        {{else}}
+          {{#each (getProperty @root.data.supplimentaryResponses.types.aggregations (concat this "_slugs.buckets")) ~}}
+            {{#if key ~}}
+              {{> term_checkbox slug=key field=../this selected=(getProperty @root.request.params.query ../this) instance_id=../../instance_id value=(lookup (getProperty @root.data.supplimentaryResponses.types.aggregations (concat ../this ".buckets")) @index)}}
+            {{/if ~}}
+          {{/each ~}}
+        {{/compare ~}}
       </div>
-    {{/each}}
+    {{/each ~}}
 
-    <div class="h-margin v-margin mdc-drawer--occasional">
+    <div class="h-margin v-margin mdc-drawer--occasional-ie11">
       <button class="mdc-button mdc-button--raised mdc-button--large mdc-button--fullwidth mdc-ripple-surface mdc-ripple-surface--primary" type="submit" id="{{instance_id}}-search-submit" data-mdc-auto-init="MDCRipple">
         <span class="far fa-search fa-fw mdc-list-item__graphic" aria-hidden="true"></span>
         Search
