Email template fixes

--- a/sites/configurations/goodmoves/emails/password-reset.mjml
+++ b/sites/configurations/goodmoves/emails/password-reset.mjml
@@ -1,26 +1,32 @@
 <mjml>
   <mj-body background-color="#eaeaea">
-    <mj-section>
-      <mj-column background-color="#ffffff">
-        <mj-section full-width="full-width" background-color="#42842A" color="#ffffff" padding="10px">
-          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/goodmoves-logo-white.png" width="352px" align="left"></mj-image>
-        </mj-section>
-
-        <mj-text font-size="20px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
-          <p>Hello,</p>
-          <p>Please follow this link to reset your %APP_NAME% password for your %EMAIL% account.</p>
-        </mj-text>
-        
-        <mj-button  href='%LINK%' font-family="Montserrat, helvetica, Arial, sans-serif" background-color="#42842A" color="white">
-          Reset password
-        </mj-button>
-        
-        <mj-text font-size="20px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
-          <p>If you didn’t ask to reset your password, you can ignore this email.</p>
-        </mj-text>
-        
-        <mj-section full-width="full-width" background-color="#37474F" padding="10px">
-          <mj-text font-size="15px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif">
+    <mj-wrapper background-color="#ffffff" padding="10px">
+      <mj-section background-color="#42842A" padding="10px">
+        <mj-column padding="0px">
+          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/goodmoves-logo-white.png" width="352px" align="left" padding="0px"></mj-image>
+        </mj-column>
+      </mj-section>  
+   
+      <mj-section> 
+        <mj-column padding="0px">
+          <mj-text font-size="16px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
+            <p>Hello,</p>
+            <p>Please follow this link to reset your %APP_NAME% password for your %EMAIL% account.</p>
+          </mj-text>
+          
+          <mj-button href='%LINK%' font-family="Montserrat, helvetica, Arial, sans-serif" background-color="#42842A" color="white">
+            Reset password
+          </mj-button>
+          
+          <mj-text font-size="16px" color="#000000" font-family="Montserrat, helvetica, Arial, sans-serif">
+            <p>If you didn’t ask to reset your password, you can ignore this email.</p>
+          </mj-text>
+        </mj-column>
+      </mj-section>
+      
+      <mj-section background-color="#37474F" padding="10px">
+        <mj-column padding="0px">
+          <mj-text font-size="14px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif" padding="0px">
             <p>
               &#169; 2018 The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558.
             </p>
@@ -28,9 +34,10 @@
               15 Mansfield Place, Edinburgh, EH3 6BB
             </p>
           </mj-text>
-          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" align="right" width="119px"></mj-image>  
-        </mj-section>
-      </mj-column>
-    </mj-section>
+          
+          <mj-image src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" align="right" width="119px" padding="0px"></mj-image>
+        </mj-column>
+      </mj-section>
+    </mj-wrapper>
   </mj-body>
 </mjml>
