--- a/sites/configurations/goodmoves/partials/vacancy/list.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/list.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy list{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card content-primary list{{if top_job " top-content"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info view="list"}}
   <hr class="mdc-list-divider" />
   {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
