--- a/sites/configurations/goodmoves/partials/vacancy/mini.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/mini.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy mini{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card content-primary mini{{if top_job " top-content"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info view="mini"}}
   {{> vacancy_actions slug=slug Id=Id}}
 </div>
