--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card goodmoves-vacancy search-result{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
+<div class="mdc-card content-primary search-result{{if top_job " top-content"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info view="search-result"}}
   <hr class="mdc-list-divider" />
   {{#compare (trim (getProperty @root.data.notes Id)) "!==" "" ~}}
