--- a/sites/configurations/goodmoves/templates/account/reset-password.hbs
+++ b/sites/configurations/goodmoves/templates/account/reset-password.hbs
@@ -10,11 +10,11 @@
 {{else}}
 <form id="reset-password-form" method="POST" class="reset-password-form">
   <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline4 x-padding">
+    <div class="mdc-card__info--content-primary">
+      <div class="mdc-card__info--content-primary-title mdc-typography--headline4 x-padding">
         Reset password
       </div>
-      <div class="mdc-card__info--vacancy-title mdc-typography--body2 x-padding">
+      <div class="mdc-card__info--content-primary-title mdc-typography--body2 x-padding">
         Enter your email address to be sent a password reset link
       </div>
     </div>
