--- a/sites/configurations/goodmoves/templates/pages/page.hbs
+++ b/sites/configurations/goodmoves/templates/pages/page.hbs
@@ -1,4 +1,4 @@
-<div class="container-content goodmoves-page">
+<div class="container-content content-page">
   {{> banner_ad}}
 
   <div class="mdc-card full mdc-elevation--z3">
