--- a/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -3,13 +3,13 @@
 
   {{> dialog_shortlist}}
 
-  <div class="goodmoves-vacancy">
+  <div class="content-primary">
     {{#each @root.data.primaryResponse.hits.hits ~}}
       {{~> vacancy_full _source~}}
     {{/each ~}}
   </div>
 
-  <div class="goodmoves-related-jobs">
+  <div class="content-related">
     <div class="mdc-typography--headline5 v-margin-full">
       Similar jobs
     </div>
