--- a/sites/configurations/goodmoves/partials/vacancy/gist.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/gist.hbs
@@ -1,14 +1,14 @@
-<div class="mdc-card goodmoves-vacancy gist{{if top_job " top-job"}}" data-vacancy-id="{{Id}}">
-  <div class="mdc-card__info--vacancy-row">
-    <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--organisation" style="background-image:url({{organisation.logo_url}});"></div>
-    <div class="mdc-card__info--vacancy">
-      <div class="mdc-card__info--vacancy-title mdc-typography--headline7">
+<div class="mdc-card content-primary gist{{if top_job " top-content"}}" data-vacancy-id="{{Id}}">
+  <div class="mdc-card__info--content-primary-row">
+    <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--content-secondary" style="background-image:url({{organisation.logo_url}});"></div>
+    <div class="mdc-card__info--content-primary">
+      <div class="mdc-card__info--content-primary-title mdc-typography--headline7">
         {{title}}
       </div>
-      <div class="mdc-card__info--vacancy-organisation mdc-typography--body1">
+      <div class="mdc-card__info--content-primary-organisation mdc-typography--body1">
         <a href="/organisation/{{organisation.slug}}{{@root.request.url.search}}">{{organisation.name}}</a>
       </div>
-      <div class="mdc-card__info--vacancy-details mdc-typography--caption">
+      <div class="mdc-card__info--content-primary-details mdc-typography--caption">
         <span class="far fa-calendar-alt fa-fw" title="Closing date"></span>
         {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
       </div>
