--- a/sites/configurations/goodmoves/partials/vacancy/status.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/status.hbs
@@ -1,23 +1,23 @@
 {{#unless active}}
-  <div class="panel-heading red white-text vacancy-inactive">
+  <div class="panel-heading red white-text content-primary-inactive">
     <i class="fa fa-info-circle fa-fw"></i>
     This vacancy is no longer active
   </div>
 {{else}}
   {{#compare closing_date "<" (dateMath "now")}}
-  <div class="panel-heading red white-text vacancy-closed">
+  <div class="panel-heading red white-text content-primary-closed">
     <i class="fa fa-info-circle fa-fw"></i>
     This vacancy has now closed
   </div>
   {{else}}
     {{#compare start_at ">" (dateMath "now")}}
-      <div class="panel-heading red white-text vacancy-not-published">
+      <div class="panel-heading red white-text content-primary-not-published">
         <i class="fa fa-info-circle fa-fw"></i>
         This vacancy has not yet been published
       </div>
     {{else}}
       {{#compare end_at "<" (dateMath "now")}}
-        <div class="panel-heading red white-text vacancy-no-longer-listed">
+        <div class="panel-heading red white-text content-primary-no-longer-listed">
           <i class="fa fa-info-circle fa-fw"></i>
           This vacancy is no longer listed
         </div>
