--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -22,7 +22,7 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-text-field-tt" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-                  <input type="text" id="what-jobs" name="keywords" class="mdc-text-field__input" placeholder="" data-lpignore="true" data-typeahead='{
+                  <input type="text" id="what-primary-content" name="keywords" class="mdc-text-field__input" placeholder="" data-lpignore="true" data-typeahead='{
                     "typeaheadOptions": {
                       "highlight": true,
                       "minlength": 0
@@ -98,7 +98,7 @@
                       }
                     ]
                   }'>
-                  <label for="what-jobs" class="mdc-floating-label">
+                  <label for="what-primary-content" class="mdc-floating-label">
                     Keywords
                   </label>
                   <div class="mdc-line-ripple"></div>
@@ -107,7 +107,7 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
                   <span class="far fa-map-marker-alt mdc-text-field__icon geo-lookup" tabindex="0" title="Find my location"></span>
-                  <input type="text" id="where-jobs" name="location" class="mdc-text-field__input" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-search='{
+                  <input type="text" id="where-primary-content" name="location" class="mdc-text-field__input" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-search='{
                     "googleMapsOptions": {
                       "type": ["(regions)"],
                       "componentRestrictions": {
@@ -118,7 +118,7 @@
                     "lngSelector": "[name=\"lng\"]",
                     "locationServicesSelector": ".geo-lookup"
                   }'>
-                  <label for="where-jobs" class="mdc-floating-label">
+                  <label for="where-primary-content" class="mdc-floating-label">
                     Location
                   </label>
                   <div class="mdc-line-ripple"></div>
@@ -128,21 +128,21 @@
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
                 <div class="mdc-form-field">
                   <div class="mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
-                    <select data-location="where-jobs" class="mdc-select__native-control" name="distance" id="distance-jobs">
+                    <select data-location="where-primary-content" class="mdc-select__native-control" name="distance" id="distance-primary-content">
                       <option value="8.04672">within 5 miles</option>
                       <option value="16.09344" selected>within 10 miles</option>
                       <option value="40.2336">within 25 miles</option>
                       <option value="80.4672">within 50 miles</option>
                       <option value="">any distance</option>
                     </select>
-                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-jobs">
+                    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance-primary-content">
                       Distance
                     </label>
                   </div>
                 </div>
               </div>
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
-                <button type="submit" id="search-jobs" class="mdc-button mdc-button--raised mdc-button--large mdc-text-field--box mdc-button--search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
+                <button type="submit" id="search-primary-content" class="mdc-button mdc-button--raised mdc-button--large mdc-text-field--box mdc-button--search mdc-ripple-surface mdc-ripple-surface--primary" data-mdc-auto-init="MDCRipple">
                   Search
                   <span class="far fa-search" aria-hidden="true"></span>
                 </button>
@@ -195,12 +195,12 @@
           </div>
         </div>
       </div>
-      <div class="home-jobs">
+      <div class="home-primary-content">
         {{#>components_horizontal_card_scroller
             outerClasses="home-shortlist"
             scrollLeftIconClasses="fal fa-fw fa-angle-left"
             scrollRightIconClasses="fal fa-fw fa-angle-right"
-            itemClasses="shortlist-jobs"
+            itemClasses="shortlist-primary-content"
             items=(arrayConcat
               (map @root.data.supplimentaryResponses.shortlist_vacancies_open.hits.hits (getProp "_source"))
               (map @root.data.supplimentaryResponses.shortlist_vacancies_closed.hits.hits (getProp "_source"))
@@ -237,12 +237,12 @@
         </div>
       </div>
     </div>
-    <div class="home-jobs">
+    <div class="home-primary-content">
       {{#>components_horizontal_card_scroller
           outerClasses="home-latest"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
           scrollRightIconClasses="fal fa-fw fa-angle-right"
-          itemClasses="latest-jobs latest-jobs-personalised"
+          itemClasses="latest-primary-content latest-primary-content-personalised"
           items=(if (any @root.data.primaryResponse.home_latest_personalised.hits.hits)
             (map @root.data.primaryResponse.home_latest_personalised.hits.hits (getProp "_source"))
             else=(map @root.data.primaryResponse.home_latest.hits.hits (getProp "_source"))
@@ -277,12 +277,12 @@
         </div>
       </div>
     </div>
-    <div class="home-jobs">
+    <div class="home-primary-content">
       {{#>components_horizontal_card_scroller
           outerClasses="home-latest"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
           scrollRightIconClasses="fal fa-fw fa-angle-right"
-          itemClasses="latest-jobs"
+          itemClasses="latest-primary-content"
           items=(map
             (sortByIndex @root.data.primaryResponse.recently_viewed.hits.hits (split @root.request.cookies.recently_viewed ',') '_id') (getProp "_source")
           )
@@ -307,12 +307,12 @@
         </div>
       </div>
     </div>
-    <div class="home-jobs">
+    <div class="home-primary-content">
       {{#>components_horizontal_card_scroller
           outerClasses="home-top"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
           scrollRightIconClasses="fal fa-fw fa-angle-right"
-          itemClasses="top-jobs"
+          itemClasses="top-primary-content"
           items=(map @root.data.supplimentaryResponses.top.hits.hits (getProp "_source"))
           itemsPartial="vacancy_mini"
           moreUrl="/search"
