--- a/sites/configurations/goodmoves/templates/vacancies/search.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search.hbs
@@ -1,3 +1,3 @@
-<div id="detailed-results-container" class="container-content goodmoves-vacancy-search">
+<div id="detailed-results-container" class="container-content content-primary-search">
   {{> vacancy_search_results this}}
 </div>
