--- a/sites/configurations/getinvolved/partials/opportunity/full.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/full.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card milo-volunteering-opportunity full" data-opportunity-id="{{Id}}">
+<div class="mdc-card content-primary full" data-opportunity-id="{{Id}}">
   {{> opportunity_key_info}}
   <hr class="mdc-list-divider" />
   <div class="opportunity-info-container">
@@ -12,7 +12,7 @@
         <div class="key-info-extra">
           <ul class="fa-ul">
             {{#if available_from ~}}
-              <li class="mdc-card__info--opportunity-from mdc-typography--body1">
+              <li class="mdc-card__info--content-primary-from mdc-typography--body1">
                 <span class="fa-li"><span class="far fa-calendar-plus fa-fw" title="Start date"></span></span>
                 Advertised from {{momentFormat (moment available_from "x") "Do MMMM YYYY"}}
               </li>
@@ -126,7 +126,7 @@
           {{#if organisation_website ~}}
           {{#compare organisation_website "!==" null ~}}
           {{#compare organisation_website "!==" "http://" ~}}
-          <li class="mdc-card__info--opportunity-website mdc-typography--body1">
+          <li class="mdc-card__info--content-primary-website mdc-typography--body1">
             <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
             <a href="{{organisation_website_url}}">
               {{organisation_website}}
@@ -138,7 +138,7 @@
           {{#if organisation_twitter ~}}
           {{#compare organisation_twitter "!==" null ~}}
           {{#compare organisation_twitter "!==" "http://" ~}}
-          <li class="mdc-card__info--opportunity-twitter mdc-typography--body1">
+          <li class="mdc-card__info--content-primary-twitter mdc-typography--body1">
             <span class="fa-li"><span class="fab fa-twitter fa-fw" title="Twitter"></span></span>
             <a href="{{organisation_twitter_url}}">
               {{organisation_twitter}}
@@ -150,7 +150,7 @@
           {{#if organisation_facebook ~}}
           {{#compare organisation.acebook "!==" null ~}}
           {{#compare organisation_facebook "!==" "http://" ~}}
-          <li class="mdc-card__info--opportunity-facebook mdc-typography--body1">
+          <li class="mdc-card__info--content-primary-facebook mdc-typography--body1">
             <span class="fa-li"><span class="fab fa-facebook fa-fw" title="Facebook"></span></span>
             <a href="{{organisation_facebook_url}}">
               {{organisation_facebook}}
@@ -162,7 +162,7 @@
           {{#if organisation_linkedin ~}}
           {{#compare organisation_linkedin "!==" null ~}}
           {{#compare organisation_linkedin "!==" "http://" ~}}
-          <li class="mdc-card__info--opportunity-linkedin mdc-typography--body1">
+          <li class="mdc-card__info--content-primary-linkedin mdc-typography--body1">
             <span class="fa-li"><span class="fab fa-linkedin fa-fw" title="LinkedIn"></span></span>
             <a href="{{organisation_linkedin_url}}">
               {{organisation_linkedin}}
