--- a/sites/configurations/getinvolved/partials/opportunity/mini.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/mini.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card milo-volunteering-opportunity mini" data-opportunity-id="{{Id}}">
+<div class="mdc-card content-primary mini" data-opportunity-id="{{Id}}">
   {{> opportunity_key_info}}
   {{> opportunity_actions slug=slug Id=Id}}
 </div>
