--- a/sites/configurations/getinvolved/partials/opportunity/search-result.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/search-result.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card milo-volunteering-opportunity search-result{{if top_job " top-job"}}" data-opportunity-id="{{Id}}">
+<div class="mdc-card content-primary search-result{{if top_job " top-job"}}" data-opportunity-id="{{Id}}">
   {{> opportunity_key_info}}
   <hr class="mdc-list-divider" />
   {{> opportunity_description limit="6rem" description=description}}
