--- a/sites/configurations/getinvolved/templates/opportunities/favourites.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/favourites.hbs
@@ -1,4 +1,4 @@
-<div id="detailed-results-container" class="container-content milo-favourites">
+<div id="detailed-results-container" class="container-content content-shortlist">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
