--- a/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
+++ b/sites/configurations/getinvolved/templates/opportunities/opportunity.hbs
@@ -1,13 +1,13 @@
 <div class="container-content">
   {{#compare @root.data.primaryResponse.hits.total ">" 0}}
 
-  <div class="milo-volunteering-opportunity">
+  <div class="content-primary">
     {{#each @root.data.primaryResponse.hits.hits ~}}
       {{> opportunity_full _source}}
     {{/each ~}}
   </div>
 
-  <div class="milo-related-opportunities">
+  <div class="content-related">
     <div class="mdc-typography--headline5 v-margin-full">
       Similar opportunities
     </div>
