--- a/sites/configurations/getinvolved/templates/organisations/organisation.hbs
+++ b/sites/configurations/getinvolved/templates/organisations/organisation.hbs
@@ -1,4 +1,4 @@
-<div class="container-content goodmoves-organisation">
+<div class="container-content content-secondary">
   {{#compare data.primaryResponse.hits.total ">" 0 ~}}
 
   {{> dialog_shortlist}}
