--- a/sites/configurations/getinvolved/partials/opportunity/full.hbs
+++ b/sites/configurations/getinvolved/partials/opportunity/full.hbs
@@ -1,13 +1,13 @@
 <div class="mdc-card content-primary full" data-opportunity-id="{{Id}}">
   {{> opportunity_key_info}}
   <hr class="mdc-list-divider" />
-  <div class="opportunity-info-container">
-    {{#>components_tab_bar id="opportunity-tab-bar" defaultTabIdentifier="tab"}}
+  <div class="content-primary-info-container">
+    {{#>components_tab_bar id="content-primary-tab-bar" defaultTabIdentifier="tab"}}
       {{>components_tab iconClasses="far fa-list-ul fa-fw" label="Information" active=true tabName="panel-1"}}
       {{>components_tab iconClasses="far fa-map-marker-alt fa-fw" label="Location" active=false tabName="panel-2"}}
     {{/components_tab_bar}}
     <hr class="mdc-list-divider" />
-    <div class="panels" for="opportunity-tab-bar">
+    <div class="panels" for="content-primary-tab-bar">
       <div class="panel panel--active mdc-card--full-content" role="tabpanel" aria-hidden="false" id="panel-1">
         <div class="key-info-extra">
           <ul class="fa-ul">
