--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -195,7 +195,7 @@
           </div>
         </div>
       </div>
-      <div class="home-primary-content">
+      <div class="home-content-primary">
         {{#>components_horizontal_card_scroller
             outerClasses="home-shortlist"
             scrollLeftIconClasses="fal fa-fw fa-angle-left"
