--- a/sites/global/components/horizontal-card-scroller.hbs
+++ b/sites/global/components/horizontal-card-scroller.hbs
@@ -18,7 +18,7 @@
           </div>
         {{/each}}
         {{#if moreUrl}}
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-jobs last-card {{moreClasses}}">
+          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone latest-content-primary last-card {{moreClasses}}">
             <div class="mdc-card align-centre mdc-typography--body1 {{moreCardClasses}}">
               <a href="{{{moreUrl}}}">{{default moreText "More"}}</a>
             </div>
