--- a/sites/configurations/goodmoves/templates/events/event.hbs
+++ b/sites/configurations/goodmoves/templates/events/event.hbs
@@ -1,4 +1,4 @@
-<div class="container-content goodmoves-event">
+<div class="container-content content-event">
   {{#compare data.primaryResponse.hits.total ">" 0 ~}}
   {{#with data.primaryResponse.hits.hits.[0]._source as |event| ~}}
 
