--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -19,12 +19,12 @@
   </div>
 {{/inline}}
 
-<div id="detailed-results-container" class="container-content goodmoves-settings">
+<div id="detailed-results-container" class="container-content content-settings">
   <h1 class="mdc-typography--headline3 v-margin-full">
     Settings
   </h1>
 
-  <section class="settings-section goodmoves-settings-email">
+  <section class="settings-section content-settings-email">
     <h2 class="mdc-typography--headline5">
       Email alerts
     </h2>
@@ -66,7 +66,7 @@
 
   <hr />
 
-  <section class="settings-section goodmoves-settings-account">
+  <section class="settings-section content-settings-account">
     <h2 class="mdc-typography--headline5">
       Account
     </h2>
