--- a/sites/configurations/goodmoves/templates/events/search.hbs
+++ b/sites/configurations/goodmoves/templates/events/search.hbs
@@ -1,3 +1,3 @@
-<div id="detailed-results-container" class="container-content goodmoves-event-search">
+<div id="detailed-results-container" class="container-content content-event-search">
   {{> event_search_results this}}
 </div>
