--- a/sites/configurations/goodmoves/templates/vacancies/notes.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/notes.hbs
@@ -1,4 +1,4 @@
-<div id="detailed-results-container" class="container-content goodmoves-notes">
+<div id="detailed-results-container" class="container-content content-notes">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
