--- a/sites/configurations/goodmoves/templates/vacancies/home.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/home.hbs
@@ -237,7 +237,7 @@
         </div>
       </div>
     </div>
-    <div class="home-primary-content">
+    <div class="home-content-primary">
       {{#>components_horizontal_card_scroller
           outerClasses="home-latest"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
@@ -277,7 +277,7 @@
         </div>
       </div>
     </div>
-    <div class="home-primary-content">
+    <div class="home-content-primary">
       {{#>components_horizontal_card_scroller
           outerClasses="home-latest"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
@@ -307,7 +307,7 @@
         </div>
       </div>
     </div>
-    <div class="home-primary-content">
+    <div class="home-content-primary">
       {{#>components_horizontal_card_scroller
           outerClasses="home-top"
           scrollLeftIconClasses="fal fa-fw fa-angle-left"
