--- a/sites/configurations/goodmoves/partials/currently-recruiting.hbs
+++ b/sites/configurations/goodmoves/partials/currently-recruiting.hbs
@@ -10,7 +10,7 @@
     <div class="mdc-layout-grid__inner">
       {{#each @root.data.supplimentaryResponses.currently_recruiting.hits.hits ~}}
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-phone">
-        <a href="/organisation/{{_source.slug}}" class="organisation-logo">
+        <a href="/organisation/{{_source.slug}}" class="content-secondary-logo">
           <img src="{{_source.logo_url}}" alt="{{_source.title}}" />
         </a>
       </div>
