functional organisation map

--- a/sites/configurations/getinvolved/templates/organisations/map.hbs
+++ b/sites/configurations/getinvolved/templates/organisations/map.hbs
@@ -13,7 +13,7 @@
       {{#if _source.geo_coords ~}}
         {{#each (arrayify _source.geo_coords) ~}}
           <marker style="display:none;" data-map="fullMap" data-lat="{{lat}}" data-lng="{{lon}}" data-shortlisted="{{#each @root.data.shortlist.items}}{{#compare id "===" ../../_source.Id}}true{{/compare}}{{/each}}" data-title="{{../_source.title}}">
-            {{>opportunity_map ../_source}}
+            {{>organisation_map ../_source}}
           </marker>
         {{/each ~}}
       {{/if ~}}
