Ready to go live

--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -38,7 +38,7 @@
   <meta name="theme-color" content="#3c7524">
   <link rel="search" type="application/opensearchdescription+xml" title="Goodmoves" href="/assets/opensearch.xml" />
 
-  <!-- <link rel="canonical" href="https://goodmoves.com{{request.params.uri.pathname}}" /> -->
+  <link rel="canonical" href="https://goodmoves.com{{request.params.uri.pathname}}" />
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-6"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
