--- a/sites/configurations/goodmoves/templates/vacancies/search-rss-head-tags.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/search-rss-head-tags.hbs
@@ -6,4 +6,4 @@
 <title>Goodmoves – Search results</title>
 {{/if ~}}
 <description>{{{description}}}</description>
-<link>https://test.goodmoves.com{{{replace (replace request.params.uri.path "&rss" "") "?rss" ""}}}</link>
+<link>https://goodmoves.com{{{replace (replace request.params.uri.path "&rss" "") "?rss" ""}}}</link>
