Fixed search queries in emailer

--- a/sites/configurations/emailer/templates/process/email-data.hbs
+++ b/sites/configurations/emailer/templates/process/email-data.hbs
@@ -10,6 +10,7 @@
         "to": {{{stringify email}}},
         "o:tag": {{{stringify campaign}}},
         "o:tracking": true,
+        "o:testmode": true,
         "tag": {{{stringify campaign}}},
         "id": {{{stringify campaign}}},
         "connectionName": {{{stringify (getProperty @root.context.metaData.campaignConfig (concat campaign '.mailgunConnection'))}}},
