Bugfix in organisation search

--- a/sites/configurations/goodmoves/partials/organisation/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/organisation/search-result.hbs
@@ -12,7 +12,7 @@
         <a href="/organisation/{{slug}}{{@root.request.url.search}}">{{title}}</a>
       </div>
       <div class="search-result-article__snippet mdc-typography--body1">
-        {{{og_summary}}}
+        {{stripTags og_summary}}
       </div>
     </div>
   </div>
